<resources>
    <string name="app_name">Aayojok</string>
    <string name="google">Sign In / Register</string>
    <string name="login">Enter with your Google account</string>
    <string name="title_activity_side_nav">SideNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aayojok</string>
    <string name="nav_header_subtitle">Create, Join, Manage Your Event</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_bottom_nav">Aayojok</string>
    <string name="title_myEvent">My Events</string>
    <string name="title_profile">Profile</string>
    <string name="title_newEvent">New Event</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_activity_tab_participant">TabParticipant</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_near_by_place">Map</string>
</resources>
