<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:background="@color/utility"
              android:gravity="center"
              android:layout_height="match_parent" android:orientation="vertical">


    <ImageView
            android:layout_width="200dp" android:layout_height="200dp"
            android:src="@mipmap/ic_launcher1"

            android:layout_margin="10dp"
            tools:layout_editor_absoluteY="132dp" tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/app_name"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:gravity="center"
              android:textSize="40sp"
              android:layout_marginBottom="20dp"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/login"
              android:textColor="@color/black"

              android:textStyle="bold"
              android:gravity="center"
              android:textSize="20sp"
              android:layout_height="wrap_content"/>
    <Button
            android:text="@string/google"
            android:layout_width="278dp"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:drawableLeft="@drawable/google"
            android:paddingLeft="50dp"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:background="@drawable/btn_google"
            android:layout_height="96dp"
            android:id="@+id/btn_login"/>


</LinearLayout>